# -os-patch

./: AnoBypass.h  AnoBypass.plist  BypassTweak.plist  CMakeLists.txt  Cmakelist.txt  DobbyHookExample.mm  Health.xm  Main.mm  Makefile  MemoryUtils.h  README.md  TssBypass.cpp  Tweak.m  Tweak.mk  Tweak.mm  Tweak.x  Tweak.xm  antibanpatch.plist  build.sh  control  dobby.cpp  ios.toolchain.cmake  libdobby.dylib  main.cpp  makefile  patch.c  patch.h
.github/workflows/: build.yml  main.yml
include/: dobby.h
src/: GeminiMemoryPatch.cpp  GeminiMemoryPatch.mm
